Using my fork of cncd/pipeline with the imagepull changes

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,7 +3,8 @@
 
 [[constraint]]
   name = "github.com/cncd/pipeline"
-  branch = "master"
+  branch = "imagepull-progress"
+  source = "https://github.com/laszlocph/pipeline"
 
 [[constraint]]
   name = "github.com/drone/drone-go"
